# terminal-annotator

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml
docs/: IMPLEMENTATION_PLAN.md  VOICE_ANNOTATION_PLAN.md  spec.md
scripts/: install-terminator-plugin.sh  uninstall-terminator-plugin.sh
terminal_annotator/: __init__.py
terminal_annotator/adapters/: __init__.py
terminal_annotator/adapters/terminator/: __init__.py  audio_recording.py  dialog.py  terminal_annotator_plugin.py  terminal_io.py
terminal_annotator/adapters/transcription/: __init__.py  litellm_provider.py  vercel_gateway_provider.py
terminal_annotator/cli/: __init__.py  main.py
terminal_annotator/core/: __init__.py  annotation.py  cleanup.py  formatter.py  logging.py  session.py  store.py  transcription.py
tests/: __init__.py
tests/adapters/: test_audio_recording.py  test_dialog_audio_levels.py  test_litellm_provider.py  test_vercel_gateway_provider.py
tests/cli/: test_main.py
tests/core/: test_cleanup.py  test_formatter.py  test_logging.py  test_session.py  test_store.py  test_transcription.py
